@@ -1,2 +1,2 @@
 if {![package vsatisfies [package provide Tcl] 8.2]} {return}
-package ifneeded jpeg 0.3.5 [list source [file join $dir jpeg.tcl]]
+package ifneeded jpeg 0.4.0 [list source [file join $dir jpeg.tcl]]
